<resources>
    <string name="app_name">Calyx</string>
    <string name="textview">TextView</string>
    <string name="equals">=</string>
    <string name="modulo">%</string>
    <string name="rbracket">)</string>
    <string name="lbracket">(</string>
    <string name="quotient">/</string>
    <string name="bksp">Bksp</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="mul">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="min">-</string>
    <string name="_4">4</string>
    <string name="button">Button</string>
    <string name="plus">+</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
</resources>